The first time in codechef